commit from master

--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <h1> this is a test website </h1>
 <h2> this is from a branch line </h2>
+<h2> this is from a master branch threeway merge file </h2>
