--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 <h2> this is from a branch line </h2>
 <h2> this is for a 3 way checkout merge</h2>
 <h2> this is from a master branch threeway merge file </h2>
+<h2> changes from Git hub GUI</h2>
