--- a/index.html
+++ b/index.html
@@ -4,3 +4,4 @@
 <h2> this is from a master branch threeway merge file </h2>
 <h2> post the 3 way merge file </h2>
 <h2> changes from Git hub GUI</h2>
+<h2> changes made from aws today</h2>
